--- a/public/tests.html
+++ b/public/tests.html
@@ -18,6 +18,6 @@
 		<script type="text/javascript" src="js/jasmine/boot.js"></script>
 
 		<script type="text/javascript" src="js/tests/validator.js"></script>
-
+		<script type="text/javascript" src="js/tests/message.js"></script>
 	</body>
 </html>
